--- a/index2.html
+++ b/index2.html
@@ -76,66 +76,6 @@
 	</div>
 <!-- Preloader end -->
 
-<!-- header  -->
-<header id="header">
-    <!-- logo -->
-    <div class="logo-wrapper">
-        <a href="index-2.html"><div class="logo" style="background-image: url('http://placehold.it/294x294');background-size: cover;"></div></a>
-    </div><!-- logo end -->
-
-    <!-- navigation -->
-    <ul id="navs">
-        <li><a href="#home" class="active">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#service">Service</a></li>
-		<li><a href="#portfolio">Portfolio</a></li>
-		<li><a href="#clients">Clients</a></li>
-		<li><a href="#pricetable">Price Table</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-	<!-- navigation end -->
-
-	<!-- social links -->
-    <ul class="social">
-         <li><a class="facebook" href="#"></a></li>
-         <li><a class="twitter" href="#"></a></li>
-         <li><a class="linkedin" href="#"></a></li>
-         <li><a class="google" href="#"></a></li>
-         <li><a class="vimeo" href="#"></a></li>
-         <li><a class="github" href="#"></a></li>
-         <li><a class="behance" href="#"></a></li>
-         <li><a class="dribble" href="#"></a></li>
-         <li><a class="forrst" href="#"></a></li>
-         <li><a class="lastfm" href="#"></a></li>
-         <!--li><a class="rss" href="#"></a></li>
-         <li><a class="instagram" href="#"></a></li>
-         <li><a class="vimeo" href="#"></a></li>
-         <li><a class="forrst" href="#"></a></li>
-         <li><a class="pinterest" href="#"></a></li>
-         <li><a class="skype" href="#"></a></li>
-         <li><a class="picassa" href="#"></a></li>
-         <li><a class="youtube" href="#"></a></li>
-         <li><a class="flickr" href="#"></a></li>
-         <li><a class="tumblr" href="#"></a></li>
-         <li><a class="blogger" href="#"></a></li>
-         <li><a class="delicious" href="#"></a></li>
-         <li><a class="digg" href="#"></a></li>
-         <li><a class="friendfeed" href="#"></a></li>
-         <li><a class="wordpress" href="#"></a></li>-->
-    </ul>
-    <!-- social links end -->
-
-    <!-- header trigger -->
-	<a id="open-nav" class="fa fa-bars">
-	   	<i></i>
-	</a>
-	<!-- header trigger end -->
-</header>
-<!-- header end -->
-
 <!-- START PAGE WRAPPER -->
 <div id="page-wrapper">
 
@@ -163,7 +103,41 @@
 		</div>
 	</section>
 <!-- Section : Home end -->
+<!-- Navigation -->
+<div class="main-nav">
 
+	<nav class="navbar navbar-default" role="navigation">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li><a href="#home" class="colapse-menu1 active">Home</a></li>
+	        <li><a href="#about" class="colapse-menu1">About</a></li>
+	        <li><a href="#resume" class="colapse-menu1">Resume</a></li>
+	        <li><a href="#skills" class="colapse-menu1">Skills</a></li>
+	        <li><a href="#service" class="colapse-menu1">Service</a></li>
+			<li><a href="#portfolio" class="colapse-menu1">Portfolio</a></li>
+			<li><a href="#clients" class="colapse-menu1">Clients</a></li>
+			<li><a href="#pricetable" class="colapse-menu1">Price Table</a></li>
+	        <li><a href="#blog" class="colapse-menu1">Blog</a></li>
+	        <li><a href="#contact" class="colapse-menu1">Contact</a></li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+
+</div>
+<!-- End of Navigation -->
 <!-- Section : About -->
 				<section id="about" class="section">
 					<div class="container">
@@ -1248,10 +1222,11 @@
 				</section>
 <!-- Section : Contact end -->
 
+
 <!-- Footer -->
 			<footer>
 				<div class="container">
-					<div class="copyright">&copy; 2014 metrothemes All rights reserved.</div>				
+					<div class="copyright"> &copy; 2014 metrothemes All rights reserved.</div>				
 				</div>
 			</footer>
 <!-- Footer end -->
@@ -1276,6 +1251,8 @@
 <script type="text/javascript" src="js/skrollr.js"></script>
 <script type="text/javascript" src="js/tweetscroll/jquery.tweetscroll.js"></script>
 <script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
+<script type="text/javascript" src="js/jquery.sticky.js"></script>
+<script type="text/javascript" src="js/another.js"></script>
 <script type="text/javascript" src="js/metro.js"></script>
 </body>
 </html>
